[SI-695] Apply customized log4j properties for yarn-client and yarn-cluster mode respectively. Default output will point to console which will be captured by YARN container logs. Spark driver logs will now go to spark-driver.log and executor logs will go to spark-executor.log. Rotation for executor logs are applied by the RFA configuration in log4j. [AE-2048] Update spark-env.sh to include Hive JARs in classpath and distribute them for both yarn-client and yarn-cluster mode. This still requires user to upload Hive JARs via the --jars option, however, they no longer need to specify the lengthy classpath in SparkConf. Remove -x from /bin/sh. [HT-469] Test cases now apply --jars to load Hive JARs in classpath and no longer need to explicitly specify the lengthy hive classpath. [AE-2047] Fix AM complaining about 'Unable to load native-hadoop'